--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass&display=swap");
 @import "./utils/colors";
 @import "../components/RatingState";
+@import "../components/EndRatingState";
 * {
   margin: 0;
   padding: 0;
